--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,18 @@
 - name: Docs
   link: /docs/
+- name: Addon support
+  link: /#
+  dropdown:
+    - name: Getting started
+      link: /starting/
+    - name: Solar systems
+      link: /solar/
+    - name: Planets
+      link: /planet/
+    - name: Dimensions
+      link: /dim/
+    - name: Skyboxes
+      link: /sky/
 - name: Example Pages
   link: /#
   dropdown:
