--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: Docs
   link: /docs/
 - name: Addon support
-  link: /#
+  link: /addons/#
   dropdown:
     - name: Getting started
       link: /starting/
