--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://cosmic-mod.github.io"
 permalink: pretty
 favicon: /assets/icon.jpg
 #hide_share_buttons: true
-#theme_color: '#eeeeee'
+theme_color: '#8c03fc'
 #fixed_navbar: top
 #direction: one of <ltr, rtl, auto>, default: ltr
 force_theme: dark
