--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ exclude:
 
 livereload: true
 
-#sass:
- # style: compressed
-  #source_dir: _sass
-  # load_paths: 
-    # - node_modules
+sass:
+  style: compressed
+  source_dir: _sass
+   load_paths: 
+     - node_modules
 
 
 
