--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-paginate
   - kramdown-parser-gfm
   - jekyll-redirect-from
 
