--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Cosmic Horizons
 tagline: A Space Mod never seen before 
 
 description: >
-  The demo site for Bulma Clean Theme, made for Jekyll and GitHub pages websites
+  A Space Mod never seen before
 baseurl: "/"
 url: "https://cosmic-mod.github.io"
 permalink: pretty
