--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -10,5 +10,7 @@
       link: /addonsupport/dimensions/
     - name: Skyboxes
       link: /addonsupport/skyboxes/
+    - name: Fancy JSON text
+      link: /addonsupport/fancytext/
     - name: Contributing
       link: /addonsupport/contributing/
