--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 lang: en
 title: Cosmic Horizons
 tagline: A Space Mod never seen before 
+logo: /assets/icon.jpg
 
 description: >
   A Space Mod never seen before
